--- a/frontend/package.json
+++ b/frontend/package.json
@@ -19,8 +19,9 @@
     "maath": "^0.10.8",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-leaflet": "^4.2.1",
     "react-router-dom": "^7.1.5",
-    "react-simple-maps": "^1.0.0",
+    "react-simple-maps": "^3.0.0",
     "react-tilt": "^1.0.2",
     "react-vertical-timeline-component": "^3.5.3"
   },
