added routes for getting State Data, either getting all or a specific query. Added seeding as well!

--- a/backend/package.json
+++ b/backend/package.json
@@ -4,8 +4,8 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "nodemon src/index.ts",
-    "seedState": "node src/seed/stateSeed.ts"
+    "dev": "nodemon src/index.ts", 
+    "seed": "nodemon src/seed/stateSeed.ts"
   },
   "keywords": [],
   "author": "",
