--- a/frontend/package.json
+++ b/frontend/package.json
@@ -24,7 +24,7 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-google-maps": "^7.3.0",
-    "react-leaflet": "^5.0.0",
+    "react-leaflet": "^5.0.0-rc.2",
     "react-router-dom": "^7.1.5",
     "react-simple-maps": "^1.0.0",
     "react-tilt": "^1.0.2",
