began creating clinic route

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -18,12 +18,12 @@
     "@types/react-dom": "^18.3.5",
     "@vis.gl/react-google-maps": "^1.5.1",
     "axios": "^1.7.9",
+    "dotenv": "^16.4.7",
     "framer-motion": "^12.4.1",
-    "leaflet": "^1.9.4",
     "maath": "^0.10.8",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "react-leaflet": "^4.2.1",
+    "react-geocoding": "^4.0.5",
     "react-router-dom": "^7.1.5",
     "react-tilt": "^1.0.2",
     "react-vertical-timeline-component": "^3.5.3",
